--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -28,13 +28,13 @@ jobs:
     steps:
       # Clone
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         
       - name: Setup Pages
-        uses: actions/configure-pages@v2
+        uses: actions/configure-pages@v5
         
       - name: Setup .NET SDK
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 7.0.101
       
@@ -48,21 +48,22 @@ jobs:
       - name: Change base-tag in index.html from / to WASMSerialTerminal
         run: sed -i 's/<base href="\/" \/>/<base href="\/WASMSerialTerminal\/" \/>/g' WASMSerialTerminal/wwwroot/index.html
       
-      # Publishes Blazor project to the release-folder
+      # Publishes Blazor project to the release folder
       - name: Publish Project
         run: dotnet publish WASMSerialTerminal/WASMSerialTerminal.csproj -c Release -o release --nologo
         
       # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
-      # This is needed because Blazor uses underscores in the _framework folder, and without it the project will not function.
+      # This is needed because Blazor uses underscores in folders such as _framework.
       - name: Add .nojekyll file
         run: touch release/wwwroot/.nojekyll
         
-      # Upload publish folder to github pages
+      # Upload publish folder to github artifact
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
           path: 'release/wwwroot'
           
+      # Deploy the artifact to Gtihub Pages
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v4
